@@ -1,7 +1,6 @@
-# $Id: DISABLED,v 1.27 2008-08-28 02:24:46 danf Exp $
+# $Id: DISABLED,v 1.28 2008-08-28 06:28:07 danf Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
-1065
 1069
